--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,5 @@
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
-html, body { height: 100%; }
+html, body { height: 100%; background-color: #CAE9FF; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
