--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,8 @@
       </div>
   </nav>
 
-  <div *ngIf="this.component" class="mt-5 table">
+  <!-- Cards with the movies -->
+  <div *ngIf="this.component == true" class="mt-5 table">
     <table class="col-12 mt-lg-1 mt-sm-1 mt-md-1 mt-3 padding">
       <tr *ngFor="let movie of movies" (click)="goToDetail(movie.id)">
         <td>{{movie.title}}</td>
