finished detail movie

--- a/src/app/detail-movie/detail-movie.component.scss
+++ b/src/app/detail-movie/detail-movie.component.scss
@@ -11,11 +11,13 @@
 .poster {
     float: left;
     width: 25%;
+    margin-bottom: 15px;
 }
 
 .information {
     float: right;
     width: 75%;
+    margin-bottom: 15px;
 }
 
 .img {
