finished list with movies

--- a/src/app/list-movies/list-movies.component.html
+++ b/src/app/list-movies/list-movies.component.html
@@ -1,5 +1,5 @@
-<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 cardList">
-  <div class="col" *ngFor="let movie of movies">
+<div class="row col-12 row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
+  <div class="col cardlist" *ngFor="let movie of movies">
     <div class="card mt-5 mx-auto mb-3" (click)="goToDetail(movie.id)">
       <img src="{{movie.poster_path}}" class="card-img-top img">
       <div class="card-body">
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-<div class="row row-cols-auto mt-5 mb-5">
+<div class="row row-cols-auto col-12 mt-5 mb-5">
   <button class="btn mx-auto btn-outline-primary button" [disabled]="this.page == 1" type="button" (click)="previousPage()"><< Anterior</button>
   <button class="btn mx-auto btn-outline-primary button" type="button" (click)="nextPage()">Siguiente >></button>
 </div>
