--- a/src/app/list-movies/list-movies.component.scss
+++ b/src/app/list-movies/list-movies.component.scss
@@ -1,11 +1,20 @@
-.cardList {
-    .card {
+
+.img{
+    box-shadow: -10px 7px #00000040;
+}
+
+.card {
     width: 200px;
     height: 350px;
-
+    background: none;
+    border: none;
+    margin-top: 100px !important;
     .card-body {
         background-color: #5FA8D3;
-        
+        border-bottom-left-radius:  20px !important;
+        border-bottom-right-radius:  20px !important;
+        box-shadow: -10px 7px #00000040;
+        margin-bottom: 20px !important;
         h4 {
             color: white;
             font-weight: medium;
@@ -13,7 +22,6 @@
             margin: auto;
         }
     }
-}
 }
 
 .button:hover {
