--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,4 @@
 @import '~bootstrap/scss/bootstrap';
 
 html, body { height: 100%; background-color: #CAE9FF; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {  font-family: Roboto, "Helvetica Neue", sans-serif; }
